wip: breaks node network, can't restore
