# pkg/dashboard/swaggerdocs/swagger.yaml
@@ -3381,6 +3381,9 @@ definitions:
       networkChaos:
         $ref: '#/definitions/v1alpha1.NetworkChaosSpec'
         description: +optional
+      nodeChaos:
+        $ref: '#/definitions/v1alpha1.NodeChaosSpec'
+        description: +optional
       physicalmachineChaos:
         $ref: '#/definitions/v1alpha1.PhysicalMachineChaosSpec'
         description: +optional
@@ -4750,6 +4753,77 @@ definitions:
         description: only impact egress traffic to these IP addresses
         type: string
     type: object
+  v1alpha1.NodeChaosSpec:
+    properties:
+      action:
+        description: +kubebuilder:validation:Enum=network-loss
+        type: string
+      duration:
+        description: |-
+          Duration represents the duration of the chaos action
+          +optional
+        type: string
+      mode:
+        description: |-
+          Mode defines the mode to run chaos action.
+          Supported mode: one / all / fixed / fixed-percent / random-max-percent
+          +kubebuilder:validation:Enum=one;all;fixed;fixed-percent;random-max-percent
+        type: string
+      network-loss:
+        $ref: '#/definitions/v1alpha1.NetworkLossSpec'
+        description: |-
+          +ui:form:when=action=='network-loss'
+          +optional
+      remoteCluster:
+        description: |-
+          RemoteCluster represents the remote cluster where the chaos will be deployed
+          +optional
+        type: string
+      selector:
+        $ref: '#/definitions/v1alpha1.NodeSelectorSpec'
+      value:
+        description: |-
+          Value is required when the mode is set to `FixedMode` / `FixedPercentMode` / `RandomMaxPercentMode`.
+          If `FixedMode`, provide an integer of physical machines to do chaos action.
+          If `FixedPercentMode`, provide a number from 0-100 to specify the percent of physical machines the server can do chaos action.
+          IF `RandomMaxPercentMode`,  provide a number from 0-100 to specify the max percent of pods to do chaos action
+          +optional
+        type: string
+    type: object
+  v1alpha1.NodeSelectorSpec:
+    properties:
+      annotationSelectors:
+        additionalProperties:
+          type: string
+        description: |-
+          Map of string keys and values that can be used to select objects.
+          A selector based on annotations.
+          +optional
+        type: object
+      fieldSelectors:
+        additionalProperties:
+          type: string
+        description: |-
+          Map of string keys and values that can be used to select objects.
+          A selector based on fields.
+          +optional
+        type: object
+      labelSelectors:
+        additionalProperties:
+          type: string
+        description: |-
+          Map of string keys and values that can be used to select objects.
+          A selector based on labels.
+          +optional
+        type: object
+      namespaces:
+        description: |-
+          Namespaces is a set of namespace to which objects belong.
+          +optional
+        items:
+          type: string
+        type: array
+    type: object
   v1alpha1.PMJVMMySQLSpec:
     properties:
       database:
@@ -5697,6 +5771,9 @@ definitions:
       networkChaos:
         $ref: '#/definitions/v1alpha1.NetworkChaosSpec'
         description: +optional
+      nodeChaos:
+        $ref: '#/definitions/v1alpha1.NodeChaosSpec'
+        description: +optional
       physicalmachineChaos:
         $ref: '#/definitions/v1alpha1.PhysicalMachineChaosSpec'
         description: +optional
@@ -6050,6 +6127,9 @@ definitions:
         type: string
       networkChaos:
         $ref: '#/definitions/v1alpha1.NetworkChaosSpec'
+        description: +optional
+      nodeChaos:
+        $ref: '#/definitions/v1alpha1.NodeChaosSpec'
         description: +optional
       physicalmachineChaos:
         $ref: '#/definitions/v1alpha1.PhysicalMachineChaosSpec'
